2010-07-01  Andreas Kling  <andreas.kling@nokia.com>

Reviewed by Darin Adler.

        The HTML5 canvas 2d.drawImage.zerocanvas test does not pass
        https://bugs.webkit.org/show_bug.cgi?id=40271

        Unskipped canvas/philip/tests/2d.drawImage.zerocanvas.html

        * canvas/philip/tests/2d.drawImage.zerocanvas-expected.txt:
        * platform/mac/Skipped:
        * platform/qt/Skipped:
2010-07-01  Andreas Kling  <andreas.kling@nokia.com>

        Reviewed by Darin Adler.

        The HTML5 canvas 2d.drawImage.zerocanvas test does not pass
        https://bugs.webkit.org/show_bug.cgi?id=40271

        Throw INVALID_STATE_ERR when attempting to draw a canvas with zero width or height.

        Spec link:
        http://www.whatwg.org/specs/web-apps/current-work/#dom-context-2d-drawimage

        * bindings/js/JSCanvasRenderingContext2DCustom.cpp:
        (WebCore::JSCanvasRenderingContext2D::drawImage): Call setDOMException after drawImage(canvas, x, y)
        * html/canvas/CanvasRenderingContext2D.cpp:
        (WebCore::CanvasRenderingContext2D::drawImage):

Canonical link: https://commits.webkit.org/53227@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@62277 268f45cc-cd09-0410-ab3c-d52691b4dbfc