WebCore/bindings/js/JSCanvasRenderingContext2DCustom.cpp
@@ -220,6 +220,7 @@ JSValue JSCanvasRenderingContext2D::drawImage(ExecState* exec)
         switch (exec->argumentCount()) {
             case 3:
                 context->drawImage(canvas, exec->argument(1).toFloat(exec), exec->argument(2).toFloat(exec), ec);
+                setDOMException(exec, ec);
                 break;
             case 5:
                 context->drawImage(canvas, exec->argument(1).toFloat(exec), exec->argument(2).toFloat(exec),
